--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.dev.js",
-    "dev": "webpack-dev-server --config webpack.dev.js",
-    "deploy": "webpack-dev-server --config webpack.deploy.js"
+    "dev": "webpack-dev-server --config webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
